2010-06-09  David Grundberg  <individ@acc.umu.se>

	* ov-struct.cc (Fisfield): Accept cell array as name argument.

2010-06-08  Rik <octave@nomad.inbox5.com>

        * DLD-FUNCTIONS/bsxfun.cc, DLD-FUNCTIONS/cellfun.cc, 
        DLD-FUNCTIONS/det.cc, DLD-FUNCTIONS/lookup.cc, DLD-FUNCTIONS/lu.cc, 
        DLD-FUNCTIONS/rand.cc, DLD-FUNCTIONS/svd.cc, DLD-FUNCTIONS/tril.cc, 
        data.cc, ov.cc: Improve documentation string.

2010-06-06  Michael Goffioul  <michael.goffioul@gmail.com>

	* data.cc (Frem, Fmod): Specify template arguments of binmap
	explicitely.

2010-06-02  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/strfind.cc (Fqs_replace): Allow overlapped matches.
	(Fstrrep): Support "overlaps" option.
	(Fstrfind): Ditto.

2010-05-28  Jaroslav Hajek  <highegg@gmail.com>

	* ov.h (octave_value::fast_elem_extract,
	octave_value::fast_elem_insert): New methods.
	* ov-base.cc (octave_base_value::fast_elem_extract,
	octave_base_value::fast_elem_insert,
	octave_base_value::fast_elem_insert_self): New methods.
	* ov-base.h: Declare them.
	* ov-base-mat.cc (octave_base_matrix::fast_elem_extract,
	octave_base_matrix::fast_elem_insert): New overrides.
	* ov-base-mat.h: Declare them.
	* ov-base-scalar.cc (octave_base_scalar::fast_elem_extract,
	octave_base_scalar::fast_elem_insert_self): New overrides.
	* ov-base-scalar.h: Declare them.
	(octave_base_scalar::scalar_ref): New method.
	* ov-scalar.cc (octave_scalar::fast_elem_insert_self): New override.
	* ov-scalar.h: Declare it.
	* ov-float.cc (octave_float_scalar::fast_elem_insert_self): New override.
	* ov-float.h: Declare it.
	* ov-cell.cc (octave_base_matrix<Cell>::fast_elem_extract,
	octave_base_matrix<Cell>::fast_elem_insert): New specializations.
	* DLD-FUNCTIONS/cellfun.cc (scalar_col_helper, scalar_col_helper_def,
	scalar_col_helper_nda, make_col_helper, can_extract): Remove.
	(Fcellfun): Use the new fast_elem_insert method.

2010-05-10  Rik <octave@nomad.inbox5.com>
