@@ -1,3 +1,9 @@
+2010-06-09  Jaroslav Hajek  <highegg@gmail.com>
+
+	* data.cc (Freshape): Use octave_idx_type rather than int.
+	Don't use intermediate Array when sizes are given as separate
+	arguments. Simplify computing unknown dimension.
+
 2010-06-09  David Grundberg  <individ@acc.umu.se>
 
 	* ov-struct.cc (Fisfield): Accept cell array as name argument.
